// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stars a repository 1`] = `
Array [
  <div
    className="sc-htpNat fVdVsl"
  >
    <a
      className="sc-bxivhb jPCqqG"
      href="https://github.com/tbehrsin/github-starred"
      target="_new"
    >
      <svg
        aria-hidden="true"
        className="StyledIconBase-sc-bdy9j4 jbPeIR"
        fill="currentColor"
        focusable="false"
        height={16}
        viewBox="0 0 12 16"
        width={16}
      >
        <path
          d="M4 9H3V8h1v1zm0-3H3v1h1V6zm0-2H3v1h1V4zm0-2H3v1h1V2zm8-1v12c0 .55-.45 1-1 1H6v2l-1.5-1.5L3 16v-2H1c-.55 0-1-.45-1-1V1c0-.55.45-1 1-1h10c.55 0 1 .45 1 1zm-1 10H1v2h2v-1h3v1h5v-2zm0-10H2v9h9V1z"
          fillRule="evenodd"
        />
      </svg>
      <span>
        github-starred
        /
        github-starred
      </span>
    </a>
    <button
      className="sc-bdVaJa klrspG"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="StyledIconBase-sc-bdy9j4 jbPeIR"
        fill="currentColor"
        focusable="false"
        height={16}
        viewBox="0 0 14 16"
        width={16}
      >
        <path
          d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74L14 6z"
          fillRule="evenodd"
        />
      </svg>
      <span>
        Star
      </span>
    </button>
  </div>,
  <div
    className="sc-ifAKCX fjTenm"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<div>description html</div>",
      }
    }
  />,
  <div
    className="sc-EHOje eUBQSX"
  >
    <svg
      aria-hidden="true"
      className="StyledIconBase-sc-bdy9j4 jbPeIR"
      fill="currentColor"
      focusable="false"
      height={12}
      viewBox="0 0 14 16"
      width={12}
    >
      <path
        d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74L14 6z"
        fillRule="evenodd"
      />
    </svg>
    <span>
      123
    </span>
  </div>,
]
`;

exports[`stars a repository 2`] = `
Array [
  <div
    className="sc-htpNat fVdVsl"
  >
    <a
      className="sc-bxivhb jPCqqG"
      href="https://github.com/tbehrsin/github-starred"
      target="_new"
    >
      <svg
        aria-hidden="true"
        className="StyledIconBase-sc-bdy9j4 jbPeIR"
        fill="currentColor"
        focusable="false"
        height={16}
        viewBox="0 0 12 16"
        width={16}
      >
        <path
          d="M4 9H3V8h1v1zm0-3H3v1h1V6zm0-2H3v1h1V4zm0-2H3v1h1V2zm8-1v12c0 .55-.45 1-1 1H6v2l-1.5-1.5L3 16v-2H1c-.55 0-1-.45-1-1V1c0-.55.45-1 1-1h10c.55 0 1 .45 1 1zm-1 10H1v2h2v-1h3v1h5v-2zm0-10H2v9h9V1z"
          fillRule="evenodd"
        />
      </svg>
      <span>
        github-starred
        /
        github-starred
      </span>
    </a>
    <button
      className="sc-bdVaJa klrspG"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="StyledIconBase-sc-bdy9j4 jbPeIR"
        fill="currentColor"
        focusable="false"
        height={16}
        viewBox="0 0 14 16"
        width={16}
      >
        <path
          d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74L14 6z"
          fillRule="evenodd"
        />
      </svg>
      <span>
        Unstar
      </span>
    </button>
  </div>,
  <div
    className="sc-ifAKCX fjTenm"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<div>description html</div>",
      }
    }
  />,
  <div
    className="sc-EHOje eUBQSX"
  >
    <svg
      aria-hidden="true"
      className="StyledIconBase-sc-bdy9j4 jbPeIR"
      fill="currentColor"
      focusable="false"
      height={12}
      viewBox="0 0 14 16"
      width={12}
    >
      <path
        d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74L14 6z"
        fillRule="evenodd"
      />
    </svg>
    <span>
      123
    </span>
  </div>,
]
`;

exports[`unstars a repository 1`] = `
Array [
  <div
    className="sc-htpNat fVdVsl"
  >
    <a
      className="sc-bxivhb jPCqqG"
      href="https://github.com/tbehrsin/github-starred"
      target="_new"
    >
      <svg
        aria-hidden="true"
        className="StyledIconBase-sc-bdy9j4 jbPeIR"
        fill="currentColor"
        focusable="false"
        height={16}
        viewBox="0 0 12 16"
        width={16}
      >
        <path
          d="M4 9H3V8h1v1zm0-3H3v1h1V6zm0-2H3v1h1V4zm0-2H3v1h1V2zm8-1v12c0 .55-.45 1-1 1H6v2l-1.5-1.5L3 16v-2H1c-.55 0-1-.45-1-1V1c0-.55.45-1 1-1h10c.55 0 1 .45 1 1zm-1 10H1v2h2v-1h3v1h5v-2zm0-10H2v9h9V1z"
          fillRule="evenodd"
        />
      </svg>
      <span>
        github-starred
        /
        github-starred
      </span>
    </a>
    <button
      className="sc-bdVaJa klrspG"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="StyledIconBase-sc-bdy9j4 jbPeIR"
        fill="currentColor"
        focusable="false"
        height={16}
        viewBox="0 0 14 16"
        width={16}
      >
        <path
          d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74L14 6z"
          fillRule="evenodd"
        />
      </svg>
      <span>
        Unstar
      </span>
    </button>
  </div>,
  <div
    className="sc-ifAKCX fjTenm"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<div>description html</div>",
      }
    }
  />,
  <div
    className="sc-EHOje eUBQSX"
  >
    <svg
      aria-hidden="true"
      className="StyledIconBase-sc-bdy9j4 jbPeIR"
      fill="currentColor"
      focusable="false"
      height={12}
      viewBox="0 0 14 16"
      width={12}
    >
      <path
        d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74L14 6z"
        fillRule="evenodd"
      />
    </svg>
    <span>
      123
    </span>
  </div>,
]
`;

exports[`unstars a repository 2`] = `
Array [
  <div
    className="sc-htpNat fVdVsl"
  >
    <a
      className="sc-bxivhb jPCqqG"
      href="https://github.com/tbehrsin/github-starred"
      target="_new"
    >
      <svg
        aria-hidden="true"
        className="StyledIconBase-sc-bdy9j4 jbPeIR"
        fill="currentColor"
        focusable="false"
        height={16}
        viewBox="0 0 12 16"
        width={16}
      >
        <path
          d="M4 9H3V8h1v1zm0-3H3v1h1V6zm0-2H3v1h1V4zm0-2H3v1h1V2zm8-1v12c0 .55-.45 1-1 1H6v2l-1.5-1.5L3 16v-2H1c-.55 0-1-.45-1-1V1c0-.55.45-1 1-1h10c.55 0 1 .45 1 1zm-1 10H1v2h2v-1h3v1h5v-2zm0-10H2v9h9V1z"
          fillRule="evenodd"
        />
      </svg>
      <span>
        github-starred
        /
        github-starred
      </span>
    </a>
    <button
      className="sc-bdVaJa klrspG"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="StyledIconBase-sc-bdy9j4 jbPeIR"
        fill="currentColor"
        focusable="false"
        height={16}
        viewBox="0 0 14 16"
        width={16}
      >
        <path
          d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74L14 6z"
          fillRule="evenodd"
        />
      </svg>
      <span>
        Star
      </span>
    </button>
  </div>,
  <div
    className="sc-ifAKCX fjTenm"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<div>description html</div>",
      }
    }
  />,
  <div
    className="sc-EHOje eUBQSX"
  >
    <svg
      aria-hidden="true"
      className="StyledIconBase-sc-bdy9j4 jbPeIR"
      fill="currentColor"
      focusable="false"
      height={12}
      viewBox="0 0 14 16"
      width={12}
    >
      <path
        d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74L14 6z"
        fillRule="evenodd"
      />
    </svg>
    <span>
      123
    </span>
  </div>,
]
`;
